feat(ai): complete mock clinical insight integration
Add Spring Boot AI gateway integration, privacy and safety hardening,
React clinical insight UI, tests, and implementation documentation.